--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.8.1",
+    "axios": "^0.27.2",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
     "next": "12.1.5",
@@ -33,6 +35,7 @@
     "eslint-plugin-react": "^7.29.4",
     "husky": "^7.0.0",
     "prettier": "^2.6.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
 }
