--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "prettier": "^2.6.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
   }
 }
