--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.3.2",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
