CRON- change cron schedule

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Hourly cron job
 on:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '0 12 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
