--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: Cron to update articles database
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: "0 12 * * *"
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
       - name: Hourly cron job
         run: |
-          curl --location --request POST 'https://space-flight-news-seven.vercel.app//api/articles/populate'
+          curl --location --request GET 'https://space-flight-news-seven.vercel.app//api/articles/populate'
