--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@material-ui/core": "^4.12.4",
     "@typegoose/typegoose": "^9.8.1",
     "axios": "^0.27.2",
     "mongodb": "^4.5.0",
@@ -22,6 +24,8 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "swr": "^1.3.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
