--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.4",
     "@typegoose/typegoose": "^9.8.1",
     "axios": "^0.27.2",
     "mongodb": "^4.5.0",
